pdk/1.10/modules/ROOT/pages/policies-pdk-configure-features-caching.adoc
= Sharing Data Between Workers and Configuring Caching 
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

NOTE: To view an example policy project that uses caching, see https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/data-caching/README.md[Data Caching Policy Example^].

Envoy spawns many workers to increase the policy's capability of handling requests. A single worker handles all the stages of a specific request, including outgoing connections and the response flow. This enables you to track internal status for a specific request, and to create a sequential execution flow despite the underlying event-driven implementation. 

Each worker processes a single request at a given time. To share a global state in a specific worker, use a `RefCell` without any risk of concurrent modification.

Use the provided `Cache` mechanism to create a shared global state for all workers.

After injecting the cache builder, provide an ID for the cache and the maximum number of elements the cache can support. 

The following example configures a cache that can hold ten elements:

[source,Rust]
----
#[entrypoint]
async fn configure(
    launcher: Launcher,
    cache_builder: CacheBuilder,
) -> Result<()> {
    let cache = cache_builder.new(String::from("caching")).max_entries(10);
    ...
----

The cache has the following interface:

[source,Rust]
----
pub trait Cache {
    fn save(&self, key: &str, value: Vec<u8>) -> Result<(), CacheError>;
    fn get(&self, key: &str) -> Option<Vec<u8>>;
    fn delete(&self, key: &str) -> Option<Vec<u8>>;
    fn purge(&self);
}
----

IMPORTANT: Because different workers write to the cache concurrently, there is no guarantee that the value overwritten when saving the cache is the same as when it was retrieved.

[[configure-a-cache-eviction-strategy]]
== Configure a Cache Eviction Strategy

From PDK v1.10.0 onward, the cache builder supports selecting between the first-in, first-out (FIFO) and Least Recently Used (LRU) eviction strategies. By default, the cache uses the FIFO strategy.

To select the LRU strategy, use the `eviction_strategy` method on the cache builder and provide the strategy configuration:

[source,Rust]
----
// The LRU cache shards its state, and eviction happens per-shard, so LRU
// ordering is only approximate across shards. A single shard is used here so
// the demo exercises true global LRU ordering deterministically.
let single_shard_lru = LruStrategy::default().with_shards(1);
let demo_lru = cache_builder
    .new("lru-cache".to_string())
    .eviction_strategy(EvictionStrategy::Lru(single_shard_lru))
    .ttl(Duration::from_millis(10000))
    .max_entries(2);
----

[[configure-a-cache-ttl]]
== Configure a Cache TTL

From PDK v1.10.0 onward, you can configure a time-to-live (TTL) for cache entries. Use the `ttl` method on the cache builder to set a global TTL for all entries of the cache:

[source,Rust]
----
let cache = cache_builder
    .new("caching".to_string())
    .ttl(Duration::from_millis(10000))
    .max_entries(10);
----

== See Also

* xref:policies-pdk-configure-features.adoc[]